# cim-bridge

./: Cargo.toml
examples/: test_bridge.rs
src/: error.rs  lib.rs  main.rs  types.rs
src/providers/: mod.rs  ollama.rs
src/services/: bridge.rs  mod.rs
tests/: infrastructure_tests.rs
tests/infrastructure/: mod.rs  test_bridge_connection.rs  test_message_routing.rs  test_provider_integration.rs
